[package]
name = "hokaido"
version = "0.0.1"
authors = ["Hika Hibariya <hibariya@gmail.com>"]
repository = "https://github.com/idobata/hokaido"
homepage = "https://github.com/idobata/hokaido"
license="MIT"
description='Terminal sharing tool.'
keywords = ["terminal", "tool"]

[dependencies]
docopt='0.6'
libc='0.1.8'
nix="0.3.9"
pty='0.1.5'
rmp-serialize = "0.7"
rustc-serialize='0.3'
termios='0.2.0'
