[package]
name = 'hokaido'
version = '0.0.10'
authors = ['Hika Hibariya <hibariya@gmail.com>']
repository = 'https://github.com/idobata/hokaido'
homepage = 'https://github.com/idobata/hokaido'
license='MIT'
description='Terminal sharing tool.'
keywords = ['terminal', 'tool']

[dependencies]
docopt='0.6'
env_logger = '0.3'
libc='0.2.6'
log = '0.3'
nix='0.5.0'
pty='0.1.6'
pty-shell='0.1.3'
rmp-serialize = '0.8'
rustc-serialize='0.3'
termios='0.2.0'
clippy = {version = '0.0', optional = true}

[features]
default = []
dev = ['clippy']
